Updated project dependencies, added Jenkinsfile